--- a/src/main/resources/data/voidless/worldgen/noise_settings/dark_dim_settings.json
+++ b/src/main/resources/data/voidless/worldgen/noise_settings/dark_dim_settings.json
@@ -8,7 +8,7 @@
     "Name": "minecraft:stone"
   },
   "default_fluid": {
-    "Name": "minecraft:water",
+    "Name": "voidless:blood_block",
     "Properties": {
       "level": "0"
     }
